@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-08T08:21:20Z",
-  "count_outdated" : 375,
-  "uniques_outdated" : 216,
-  "count" : 406,
+  "timestamp" : "2022-07-09T01:13:21Z",
+  "count_outdated" : 377,
+  "uniques_outdated" : 217,
+  "count" : 408,
   "uniques" : 234,
   "clones" : [
-    {
-      "timestamp": "2022-06-24T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-25T00:00:00Z",
       "count": 2,
@@ -105,8 +98,8 @@
     },
     {
       "timestamp": "2022-07-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
